--- a/.env
+++ b/.env
@@ -1,2 +1,11 @@
-MONGO_URI=mongodb://localhost:27017/TrustManagementSystem
-JWT_SECRET=yourSecretKeyHere
+# Server
+PORT=5000
+
+# Database (MongoDB Atlas connection string)
+MONGO_URI=  mongodb+srv://trusttrackADMIN:trust123@cluster0.4fmsups.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+
+# JWT Secret for authentication
+JWT_SECRET=your-very-secret-jwt-key
+
+# Optional: CORS origin for your frontend (change to your Vercel domain after deploy)
+CLIENT_URL=https://trust-track.vercel.app/
