updated render version

--- a/.env
+++ b/.env
@@ -2,10 +2,12 @@
 PORT=5000
 
 # Database (MongoDB Atlas connection string)
-MONGO_URI=  mongodb+srv://trusttrackADMIN:trust123@cluster0.4fmsups.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI= mongodb+srv://trusttracksystem:Ali123@trust-track.mbt4sj1.mongodb.net/
+# mongodb+srv://trusttracksystem:Ali123@trust-track.mbt4sj1.mongodb.net/?retryWrites=true&w=majority&appName=trust-track
 
 # JWT Secret for authentication
 JWT_SECRET=your-very-secret-jwt-key
 
 # Optional: CORS origin for your frontend (change to your Vercel domain after deploy)
 CLIENT_URL=https://trust-track.vercel.app/
+
