--- a/.env
+++ b/.env
@@ -6,8 +6,7 @@ MONGO_URI= mongodb+srv://trusttracksystem:Ali123@trust-track.mbt4sj1.mongodb.net
 # mongodb+srv://trusttracksystem:Ali123@trust-track.mbt4sj1.mongodb.net/?retryWrites=true&w=majority&appName=trust-track
 
 # JWT Secret for authentication
-JWT_SECRET=your-very-secret-jwt-key
+JWT_SECRET=s0m3SuperR@nd0mStr1ngW1thNum83rs
 
-# Optional: CORS origin for your frontend (change to your Vercel domain after deploy)
-CLIENT_URL=https://trust-track.vercel.app/
-
+# Frontend URL (no trailing slash)
+CLIENT_URL=https://trust-track.vercel.app
